* Updated snowflake name in all files (GmbH)

--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -7,17 +7,15 @@
 		<label index="locale.title">Select Installation Language</label>
 		<label index="locale.selectthislocale">Install todoyu in English</label><!-- name of the current locale language -->
 		<label index="locale.text">Please choose the language used for the installation process:</label>
-		<label index="locale.step">Select Installation Language</label>
 		<label index="license.eula">End user licence agreement for todoyu</label>
 		<label index="license.lgpl">The following third party libraries are licenced under LGPL v2.1</label>
 		<label index="license.title">Licence Agreement</label>
-		<label index="license.button">I accept, install todoyu</label>
+		<label index="license.button">I agree, install todoyu</label>
 		<label index="license.text">Welcome to the todoyu installer!</label>
-		<label index="license.step">todoyu Licence</label>
 		<label index="servercheck.title">Server Check</label>
 		<label index="servercheck.button">Setup Database Configuration</label>
 		<label index="servercheck.buttonRecheck">Recheck Server Status</label>
-		<label index="servercheck.yourphpversion">Your Version</label>
+		<label index="servercheck.yourphpversion">Your version</label>
 		<label index="servercheck.yourphpversion.ok">OK</label>
 		<label index="servercheck.yourphpversion.error">TOO LOW</label>
 		<label index="servercheck.writableCheck">Folders / Files Writable</label>
@@ -25,14 +23,12 @@
 		<label index="servercheck.notWritable">NOT WRITABLE</label>
 		<label index="servercheck.ready">Server is ready for todoyu 2.0</label>
 		<label index="servercheck.notReady">Server is NOT ready for todoyu 2.0</label>
-		<label index="servercheck.step">Server Check</label>
-		<label index="dbconnection.title">Setup database server connection</label>
+		<label index="dbconnection.title">Setup Database Connection</label>
 		<label index="dbconnection.button">Update Database Configuration</label>
 		<label index="dbconnection.server">Server</label>
 		<label index="dbconnection.username">Username</label>
 		<label index="dbconnection.password">Password</label>
 		<label index="dbconnection.text">Enter your database connection data</label>
-		<label index="dbconnection.step">Setup Database Connection</label>
 		<label index="dbselect.title">Select Database</label>
 		<label index="dbselect.button">Save Database Setup</label>
 		<label index="dbselect.text">Please select an existing database or create a new one for todoyu</label>
@@ -44,13 +40,11 @@
 		<label index="dbselect.dbEmpty">Empty</label>
 		<label index="dbselect.dbNotEmpty">Not Empty</label>
 		<label index="dbselect.tables">tables</label>
-		<label index="dbselect.step">Select Database</label>
 		<label index="importtables.title">Import Database Tables</label>
 		<label index="importtables.button">Import Database Tables</label>
 		<label index="importtables.coretables">TODOYU CORE DATABASE TABLES</label>
 		<label index="importtables.exttables">TODOYU EXTENSIONS DATABASE TABLES</label>
-		<label index="importtables.text">Import basic todoyu tables</label>
-		<label index="importtables.step">Import todoyu database tables</label>
+		<label index="importtables.text">Create tables and import required data</label>
 		<label index="systemconfig.title">System Configuration</label>
 		<label index="systemconfig.button">Save System Configuration</label>
 		<label index="systemconfig.name">System Name</label>
@@ -58,9 +52,8 @@
 		<label index="systemconfig.language">Language</label>
 		<label index="systemconfig.locale">Language (Country)</label>
 		<label index="systemconfig.timezone">Timezone</label>
-		<label index="systemconfig.text">Select your todoyu system settings</label>
+		<label index="systemconfig.text">Enter basic settings for your system</label>
 		<label index="systemconfig.text.error">Please enter a system name and email address</label>
-		<label index="systemconfig.step">System Configuration</label>
 		<label index="adminaccount.title">Create Administrator Account</label>
 		<label index="adminaccount.email">Administrator Email</label>
 		<label index="adminaccount.button">Create Administrator Account</label>
@@ -72,35 +65,31 @@
 		<label index="adminaccount.repeatPassword">Repeat Password</label>
 		<label index="adminaccount.passwordHint">at least 5 characters</label>
 		<label index="adminaccount.text">Please enter the data for your administrator account</label>
-		<label index="adminaccount.step">Create Administrator Account</label>
 		<label index="adminaccount.error">Please check the given account data</label>
 		<label index="importdemodata.title">Import Demo Data</label>
 		<label index="importdemodata.checkboxlabel">Import the demo data</label>
 		<label index="importdemodata.button">Next Step</label>
 		<label index="importdemodata.text">You can import the demo data to start testing right after you logged in. Without the demo data, you have a fresh and clean installation which you can customize to your needs.</label>
 		<label index="importdemodata.contains">Contains: Projects, Tasks, Addresses, Companies, Comments, Feedback, Roles, Work Types, Filters and More.</label>
-		<label index="importdemodata.step">Import Demo Data</label>
 		<label index="finish.title">Finish Installation</label>
-		<label index="finish.text">Finish Installation</label>
+		<label index="finish.text">Installation was successful</label>
 		<label index="finish.button">Disable installer and go to login.</label>
-		<label index="finish.step">Finish Installation</label>
-		<label index="update.title">todoyu Version Update</label>
+		<label index="update.title">Update todoyu Installation</label>
 		<label index="update.button">Start Update</label>
 		<label index="update.info">Apply database changes for your current version and compare current columns with file configuration</label>
-		<label index="update.step">Update todoyu Installation</label>
-		<label index="updatetocurrentversion.title">Update Database</label>
+		<label index="updatetocurrentversion.title">Update Database Structure</label>
 		<label index="updatetocurrentversion.button">Apply Database Changes</label>
 		<label index="updatetocurrentversion.button.noupdates">No Updates, proceed</label>
 		<label index="updatetocurrentversion.noupdates">Congratulations, your database is up-to-date. No updates are required.</label>
 		<label index="updatetocurrentversion.updates">Your database needs to be updated with the following changes</label>
-		<label index="updatetocurrentversion.step">Update Database Structure</label>
 		<label index="updatetocurrentversion.newTables">New Tables</label>
 		<label index="updatetocurrentversion.newColumns">New Columns</label>
 		<label index="updatetocurrentversion.changedColumns">Modified Columns</label>
 		<label index="updatetocurrentversion.missingKeys">Missing table keys (indexes)</label>
 		<label index="finishupdate.title">Finish Update</label>
 		<label index="finishupdate.text">Installer has updated your todoyu installation</label>
-		<label index="finishupdate.step">Finish Installation</label>
+		<label index="slogan.line1">Everyone talks about todoyu</label>
+		<label index="slogan.line2">I use it</label>
 	</labels>
 	<labels lang="de_DE">
 		<label index="panelWidget.title.progress">Installationsschritte</label>
@@ -109,14 +98,12 @@
 		<label index="locale.title">Installationssprache Wählen</label>
 		<label index="locale.selectthislocale">Installiere todoyu auf Deutsch </label><!-- name of the current locale language -->
 		<label index="locale.text">Bitte wählen Sie eine Sprache für den Installationsvorgang:</label>
-		<label index="locale.step">Installationssprache Wählen</label>
 		<label index="license.eula">Benutzer-Vereinbarung für todoyu</label>
 		<label index="license.lgpl">Folgende Dritt-Bibliotheken sind unter LGPL v2.1 lizensiert</label>
-		<label index="license.title">todoyu Installer</label>
+		<label index="license.title">todoyu Benutzerlizenz</label>
 		<label index="license.button">Ich stimme zu, todoyu jetzt installieren</label>
 		<label index="license.text">Willkommen zur Installation von todoyu!</label>
-		<label index="license.step">todoyu Benutzerlizenz</label>
-		<label index="servercheck.title">Server-Überprüfung</label>
+		<label index="servercheck.title">Server überprüfen</label>
 		<label index="servercheck.button">Datenbankkonfiguration vornehmen</label>
 		<label index="servercheck.buttonRecheck">Serverstatus erneut prüfen</label>
 		<label index="servercheck.yourphpversion">Ihre Version</label>
@@ -127,14 +114,12 @@
 		<label index="servercheck.notWritable">NICHT SCHREIBBAR</label>
 		<label index="servercheck.ready">Server ist bereit für todoyu 2.0</label>
 		<label index="servercheck.notReady">Server ist NICHT bereit für todoyu 2.0</label>
-		<label index="servercheck.step">Server prüfen</label>
-		<label index="dbconnection.title">Datenbankserver Anbindung einrichten</label>
+		<label index="dbconnection.title">Datenbankserver einrichten</label>
 		<label index="dbconnection.button">Datenbankkonfiguration speichern</label>
 		<label index="dbconnection.server">Server</label>
 		<label index="dbconnection.username">Benutzername</label>
 		<label index="dbconnection.password">Passwort</label>
 		<label index="dbconnection.text">Datenbankverbindungsdaten eingeben</label>
-		<label index="dbconnection.step">DB-Verbindung einrichten</label>
 		<label index="dbselect.title">Datenbank auswählen</label>
 		<label index="dbselect.button">Datenbank-Einstellungen speichern</label>
 		<label index="dbselect.text">Bitte wählen Sie eine existierende Datenbank für todoyu, oder erstellen Sie eine neue</label>
@@ -146,13 +131,11 @@
 		<label index="dbselect.dbEmpty">Leer</label>
 		<label index="dbselect.dbNotEmpty">Nicht leer</label>
 		<label index="dbselect.tables">Tabellen</label>
-		<label index="dbselect.step">Datenbank wählen</label>
 		<label index="importtables.title">Tabellen und Daten importieren</label>
 		<label index="importtables.button">Tabellen und Daten importieren</label>
 		<label index="importtables.coretables">TODOYU CORE DATENBANKTABELLEN</label>
 		<label index="importtables.exttables">TODOYU EXTENSION DATENBANKTABELLEN</label>
 		<label index="importtables.text">Importiere todoyu Basistabellen</label>
-		<label index="importtables.step">Datenbanktabellen importieren</label>
 		<label index="systemconfig.title">todoyu Systemeinstellungen</label>
 		<label index="systemconfig.button">Systemeinstellungen speichern</label>
 		<label index="systemconfig.name">System-Name</label>
@@ -162,7 +145,6 @@
 		<label index="systemconfig.timezone">Zeitzone</label>
 		<label index="systemconfig.text">todoyu System-Einstellungen vornehmen</label>
 		<label index="systemconfig.text.error">Bitte System-Name und -Email angeben</label>
-		<label index="systemconfig.step">System konfigurieren</label>
 		<label index="adminaccount.title">Administrator-Account Anlegen</label>
 		<label index="adminaccount.email">Administrator Email</label>
 		<label index="adminaccount.button">Administratoren-Account Anlegen</label>
@@ -171,7 +153,6 @@
 		<label index="adminaccount.repeatPassword">Passwort wiederholen</label>
 		<label index="adminaccount.passwordHint">mindestestenz 5 Zeichen</label>
 		<label index="adminaccount.text">Bitte geben Sie die Daten für Ihren Administrator-Account ein</label>
-		<label index="adminaccount.step">Administrator-Account Anlegen</label>
 		<label index="adminaccount.companyname">Firmenname</label>
 		<label index="adminaccount.adminfirstname">Administrator Vorname</label>
 		<label index="adminaccount.adminlastname">Administrator Nachname</label>
@@ -181,15 +162,12 @@
 		<label index="importdemodata.button">Weiter</label>
 		<label index="importdemodata.text">Um gleich nach dem Anmelden mit dem Testen zu beginnen, können Sie Beispieldaten importieren. Ohne die Beispieldaten haben Sie eine saubere (jedoch leere) Installation, die Sie selbst mit Daten füllen können.</label>
 		<label index="importdemodata.contains">Enthalten sind: Projekte, Aufgaben, Adressen, Firmen, Kommentare, Feedbacks, Systemrollen, Leistungsarten, Filter und noch weitere Daten.</label>
-		<label index="importdemodata.step">Beispieldaten importieren</label>
-		<label index="finish.title">Installation beendet</label>
+		<label index="finish.title">Installation abschliessen</label>
 		<label index="finish.text">Installation beendet</label>
 		<label index="finish.button">Installer deaktivieren und weiter zum Login</label>
-		<label index="finish.step">Installation abschliessen</label>
-		<label index="update.title">todoyu Versions-Aktualisierung</label>
+		<label index="update.title">todoyu aktualisieren</label>
 		<label index="update.button">Aktualisierung starten</label>
 		<label index="update.info">Änderungen der Datenbank der vorliegenden Version durchführen und mit Datei-Konfiguration abgleichen</label>
-		<label index="update.step">todoyu Installation aktualisieren</label>
 		<label index="updatetocurrentversion.title">Datenbank aktualisieren</label>
 		<label index="updatetocurrentversion.button">Datenbank-Änderungen durchführen</label>
 		<label index="updatetocurrentversion.button.noupdates">Keine Aktualisierung, weiter</label>
@@ -199,10 +177,10 @@
 		<label index="updatetocurrentversion.newColumns">Neue Spalten</label>
 		<label index="updatetocurrentversion.changedColumns">Geänderte Spalten</label>
 		<label index="updatetocurrentversion.missingKeys">Fehlende Tabellen-Indexe</label>
-		<label index="updatetocurrentversion.step">Datenbankstruktur aktualisieren</label>
-		<label index="finishupdate.step">Installation abschliessen</label>
-		<label index="finishupdate.title">Aktualisieren beenden</label>
+		<label index="finishupdate.title">Aktualisierung abschliessen</label>
 		<label index="finishupdate.text">Der Installer hat Ihre todoyu Installation aktualisiert</label>
+		<label index="slogan.line1">Alle reden von todoyu</label>
+		<label index="slogan.line2">Ich nutze es.</label>
 	</labels>
 	<labels lang="pt_BR">
 		<label index="locale.selectthislocale">Instale todoyu em português</label>
