--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -1,95 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <locallang>
 	<labels lang="en_GB">
-		<label index="panelWidget.title.progress">Steps Of Installation</label>
+		<label index="panelWidget.title.progress">Steps for Installation</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Update</label>
 		<label index="locale.title">Select Installation Language</label>
 		<label index="locale.selectthislocale">Install todoyu in English</label><!-- name of the current locale language -->
 		<label index="locale.text">Please choose the language used for the installation process:</label>
-		<label index="license.eula">End user licence agreement for todoyu</label>
+		<label index="license.eula">End user licence agreement</label>
 		<label index="license.lgpl">The following third party libraries are licenced under LGPL v2.1</label>
 		<label index="license.title">Licence Agreement</label>
-		<label index="license.button">I agree, install todoyu</label>
+		<label index="license.button">I accept, go to next step</label>
 		<label index="license.text">Welcome to the todoyu installer!</label>
 		<label index="servercheck.title">Server Check</label>
-		<label index="servercheck.button">Setup Database Configuration</label>
-		<label index="servercheck.buttonRecheck">Recheck Server Status</label>
-		<label index="servercheck.yourphpversion">Your version</label>
+		<label index="servercheck.button">Go to next step</label>
+		<label index="servercheck.buttonRecheck">Check server status again</label>
+		<label index="servercheck.yourphpversion">Version of your server</label>
 		<label index="servercheck.yourphpversion.ok">OK</label>
 		<label index="servercheck.yourphpversion.error">TOO LOW</label>
-		<label index="servercheck.writableCheck">Folders / Files Writable</label>
+		<label index="servercheck.writableCheck">Folders / Files writable</label>
 		<label index="servercheck.writable">writable</label>
 		<label index="servercheck.notWritable">NOT WRITABLE</label>
 		<label index="servercheck.ready">Server is ready for todoyu 2.0</label>
 		<label index="servercheck.notReady">Server is NOT ready for todoyu 2.0</label>
 		<label index="dbconnection.title">Setup Database Connection</label>
-		<label index="dbconnection.button">Update Database Configuration</label>
+		<label index="dbconnection.button">Save database configuration</label>
 		<label index="dbconnection.server">Server</label>
 		<label index="dbconnection.username">Username</label>
 		<label index="dbconnection.password">Password</label>
 		<label index="dbconnection.text">Enter your database connection data</label>
 		<label index="dbselect.title">Select Database</label>
-		<label index="dbselect.button">Save Database Setup</label>
-		<label index="dbselect.text">Please select an existing database or create a new one for todoyu</label>
-		<label index="dbselect.text.saved">Database Connection Saved</label>
-		<label index="dbselect.text.notCreated">Cannot create new database on server</label>
-		<label index="dbselect.text.dbNameExists">A database wIth this name already exists</label>
+		<label index="dbselect.button">Save database setup</label>
+		<label index="dbselect.text">Select an existing database or create a new dababase for todoyu</label>
+		<label index="dbselect.text.saved">Database connection saved</label>
+		<label index="dbselect.text.notCreated">Unable to create a new database on the server</label>
+		<label index="dbselect.text.dbNameExists">A database with this name already exists</label>
 		<label index="dbselect.selectDB">Select a database</label>
 		<label index="dbselect.orCreateDB">or create a new one:</label>
-		<label index="dbselect.dbEmpty">Empty</label>
-		<label index="dbselect.dbNotEmpty">Not Empty</label>
+		<label index="dbselect.dbEmpty">empty</label>
+		<label index="dbselect.dbNotEmpty">not empty</label>
 		<label index="dbselect.tables">tables</label>
 		<label index="importtables.title">Import Database Tables</label>
-		<label index="importtables.button">Import Database Tables</label>
+		<label index="importtables.button">Import database tables</label>
 		<label index="importtables.coretables">TODOYU CORE DATABASE TABLES</label>
 		<label index="importtables.exttables">TODOYU EXTENSIONS DATABASE TABLES</label>
-		<label index="importtables.text">Create tables and import required data</label>
+		<label index="importtables.text">Create tables and import the required data</label>
 		<label index="systemconfig.title">System Configuration</label>
-		<label index="systemconfig.button">Save System Configuration</label>
-		<label index="systemconfig.name">System Name</label>
-		<label index="systemconfig.email">System Email</label>
+		<label index="systemconfig.button">Save system configuration</label>
+		<label index="systemconfig.name">System name</label>
+		<label index="systemconfig.email">System e-mail</label>
 		<label index="systemconfig.language">Language</label>
-		<label index="systemconfig.locale">Language (Country)</label>
+		<label index="systemconfig.locale">Language (country)</label>
 		<label index="systemconfig.timezone">Timezone</label>
-		<label index="systemconfig.text">Enter basic settings for your system</label>
-		<label index="systemconfig.text.error">Please enter a system name and email address</label>
+		<label index="systemconfig.text">Enter the basic configuration for your system</label>
+		<label index="systemconfig.text.error">Please enter a system name and e-mail address</label>
 		<label index="adminaccount.title">Create Administrator Account</label>
-		<label index="adminaccount.email">Administrator Email</label>
-		<label index="adminaccount.button">Create Administrator Account</label>
-		<label index="adminaccount.companyname">Company Name</label>
-		<label index="adminaccount.adminfirstname">Administrator First Name</label>
-		<label index="adminaccount.adminlastname">Administrator Last Name</label>
+		<label index="adminaccount.email">Administrator e-mail</label>
+		<label index="adminaccount.button">Create administrator account</label>
+		<label index="adminaccount.companyname">Company name</label>
+		<label index="adminaccount.adminfirstname">First name</label>
+		<label index="adminaccount.adminlastname">Last Name</label>
 		<label index="adminaccount.username">Username</label>
 		<label index="adminaccount.password">Password</label>
-		<label index="adminaccount.repeatPassword">Repeat Password</label>
+		<label index="adminaccount.repeatPassword">Repeat password</label>
 		<label index="adminaccount.passwordHint">at least 5 characters</label>
-		<label index="adminaccount.text">Please enter the data for your administrator account</label>
+		<label index="adminaccount.text">Enter the data for your administrator account</label>
 		<label index="adminaccount.error">Please check the given account data</label>
-		<label index="importdemodata.title">Import Demo Data</label>
-		<label index="importdemodata.checkboxlabel">Import the demo data</label>
-		<label index="importdemodata.button">Next Step</label>
-		<label index="importdemodata.text">You can import the demo data to start testing right after you logged in. Without the demo data, you have a fresh and clean installation which you can customize to your needs.</label>
-		<label index="importdemodata.contains">Contains: Projects, Tasks, Addresses, Companies, Comments, Feedback, Roles, Work Types, Filters and More.</label>
-		<label index="finish.title">Finish Installation</label>
-		<label index="finish.text">Installation was successful</label>
-		<label index="finish.button">Disable installer and go to login.</label>
+		<label index="importdemodata.title">Import Sample Data</label>
+		<label index="importdemodata.checkboxlabel">Import sample data</label>
+		<label index="importdemodata.button">Go to next step</label>
+		<label index="importdemodata.text">You can import sample data to test todoyu right after the installation. Without importing sample data, you get an empty installation of todoyu which you then can customize to your needs.</label>
+		<label index="importdemodata.contains">Sample data contains: projects, tasks, addresses, companies, comments, feedback, roles, work types, filters and more.</label>
+		<label index="finish.title">Installation Successful</label>
+		<label index="finish.text">The installation was successful</label>
+		<label index="finish.button">Go to login page</label>
 		<label index="update.title">Update todoyu Installation</label>
-		<label index="update.button">Start Update</label>
+		<label index="update.button">Start update</label>
 		<label index="update.info">Apply database changes for your current version and compare current columns with file configuration</label>
 		<label index="updatetocurrentversion.title">Update Database Structure</label>
-		<label index="updatetocurrentversion.button">Apply Database Changes</label>
-		<label index="updatetocurrentversion.button.noupdates">No Updates, proceed</label>
+		<label index="updatetocurrentversion.button">Apply database changes</label>
+		<label index="updatetocurrentversion.button.noupdates">No updates available, proceed</label>
 		<label index="updatetocurrentversion.noupdates">Congratulations, your database is up-to-date. No updates are required.</label>
 		<label index="updatetocurrentversion.updates">Your database needs to be updated with the following changes</label>
-		<label index="updatetocurrentversion.newTables">New Tables</label>
-		<label index="updatetocurrentversion.newColumns">New Columns</label>
-		<label index="updatetocurrentversion.changedColumns">Modified Columns</label>
+		<label index="updatetocurrentversion.newTables">New tables</label>
+		<label index="updatetocurrentversion.newColumns">New columns</label>
+		<label index="updatetocurrentversion.changedColumns">Modified columns</label>
 		<label index="updatetocurrentversion.missingKeys">Missing table keys (indexes)</label>
-		<label index="finishupdate.title">Finish Update</label>
-		<label index="finishupdate.text">Installer has updated your todoyu installation</label>
-		<label index="slogan.line1">Everyone talks about todoyu</label>
-		<label index="slogan.line2">I use it</label>
+		<label index="finishupdate.title">Update Successful</label>
+		<label index="finishupdate.text">The update of your todoyu installation was successful</label>
+		<label index="slogan.line1">Thanks for using todoyu</label>
+		<label index="slogan.line2">We hope you like it.</label>
 	</labels>
 	<labels lang="de_DE">
 		<label index="panelWidget.title.progress">Installationsschritte</label>
