--- a/core/locale/static_territory.xml
+++ b/core/locale/static_territory.xml
@@ -7,8 +7,8 @@
 		<label index="num142.name">Asia</label>
 		<label index="num150.name">Europe</label>
 		<label index="num30.name">Eastern Asia</label>
-		<label index="num35.name">South-eastern Asia</label>
-		<label index="num62.name">South-central Asia</label>
+		<label index="num35.name">Southeastern Asia</label>
+		<label index="num62.name">Southern and Central Asia</label>
 		<label index="num145.name">Western Asia</label>
 		<label index="num39.name">Southern Europe</label>
 		<label index="num151.name">Eastern Europe</label>
@@ -37,16 +37,16 @@
 		<label index="num142.name">Asien</label>
 		<label index="num150.name">Europa</label>
 		<label index="num30.name">Ostasien</label>
-		<label index="num35.name">Süd-östliches Asien</label>
-		<label index="num62.name">Südliches Zentral-Asien</label>
+		<label index="num35.name">Südostasien</label>
+		<label index="num62.name">Süd- und Zentralasien</label>
 		<label index="num145.name">Westasien</label>
-		<label index="num39.name">Süd Europa</label>
+		<label index="num39.name">Südeuropa</label>
 		<label index="num151.name">Osteuropa</label>
 		<label index="num154.name">Nordeuropa</label>
 		<label index="num155.name">Westeuropa</label>
 		<label index="num830.name">Kanalinseln</label>
 		<label index="num833.name">Insel Man</label>
-		<label index="num5.name">Süd Amerika</label>
+		<label index="num5.name">Südamerika</label>
 		<label index="num13.name">Mittelamerika</label>
 		<label index="num21.name">Nordamerika</label>
 		<label index="num29.name">Karibik</label>
