--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -90,7 +90,7 @@
 		<label index="quickcreate.alltypes.label">Alle Datentypen:</label>
 		<label index="dateFormat">j.n.j</label>
 		<label index="create">Erstellen</label>
-		<label index="createNew">Daten anfügen</label>
+		<label index="createNew">Neuen Datensatz anlegen:</label>
 		<label index="edit">Bearbeiten</label>
 		<label index="load">Daten laden</label>
 		<label index="save">Speichern</label>
