--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,61 @@
 todoyu Changelog
 
+
+todoyu 2.0.0 - released 2010-05-10
+	* Feature: Added styling support for IE8. Works pretty well in Google Chrome too
+	* Feature: Added core controllers to bundle the identical request for all extensions. Includes: Autocomplete, Contextmenu, headlet, panelwidget, quickinfo
+	* Feature: If right is denied and check enabled, todoyu checks if the right exists. If not, log location where not existing right is checked
+	* Feature: Added about info splash screen
+	* Feature: Added utf-8 support to the todoyu header functions
+	* Feature: Automatically encode custom header data with JSON
+	* Featuer: Timetracking information in page title
+	* Feature: Upload your own logo for todoyu
+	* Feature: Basic extension setup process. More features prepared
+	* Feature: Todoyu uses date parse and print functions of jscalendar to work with date input fields
+	* Feature: Replaced language (en) with locale (en_GB) to prepare for various language translations and currency usage
+	* Feature: Timezone support. Every company address can have its own timezone. Appointments in the calendar will be displayed properly
+	* Feature: Multiple validators of the same type are now possible for a field
+	* Feature: Improved usability for a lot of user actions
+	* Feature: Todoyu is now completely covered with rights check
+
+
+	* Changed: All logging classes implement the TodoyuLoggerIf interface and are now implemented as clean objects which are added to a queue
+	* Changed: Changed the use of TodoyuDatasource. Moved clean versions of needed methods to TodoyuStaticRecords and removed TodoyuDatasource
+	* Changed: Language selection is now the first screen in the installer
+	* Changed: During the installation, the admin has to provide some information (name, company) to allow a quicker start
+	* Changed: Cleaned up database fields. Removed unused, unified type definitions
+	* Changed: Optimized headlet behaviour
+	* Changed: Removed direct console.log(), wrapped in Todoyu.log()
+	* Changed: Changed all javascript doc comment into the correct jsdoc syntax
+	* Changed: Patched some dwoo functions (ex: truncate) to support utf-8
+	* Changed: Every event is at least 20px height to stay visible
+	* Changed: Cleaned up quickinfo and contextmenu handling in javascript. Removed nearly all redundant code
+	* Changed: Removed functions which are not used anymore because of refactoring and cleanup
+	* Changed: Added more powerful time rounding function
+	* Changed: Allow more complex form validations (requirements, exceptions, etc)
+	* Changed: Added shadows to main- and contextmenu (CSS3)
+	* Changed: Better styling for timetracking headlet. Stays active until closed
+	* Changed: Removed all HTML errors which caused browser compatibility problems
+
+
+	* Translation: Added brazilian portuguese (provided by the community member Max N Kanadani)
+	* Translation: Added missing labels for german and english. Corrected wordings
+
+	* Bugfix: Constant SERVER_URL supports now HTTPS
+	* Bugfix: Absolute path on linux/windows system outside of the todoyu root
+	* Bugfix: Right position for error message for checkboxes
+	* Bugfix: Scroll to an element in the page (respecting the fixed header)
+	* Bugfix: Starting a timetracking while one is running send now double update request to update all necessary page parts
+	* Bugfix: Corrected display of birthdays
+	* Bugfix: Check access rights for events
+	* Bugfix: Projectrole selector could not remove person
+	* Bugfix: Comment form field was not noStorage by default
+	* Bugfix: Reminder date corrections
+	* Bugfix: Clear handling of camel case class names (JobType)
+
+
+
+
 todoyu 2.0.0-rc2 - released 2010-03-29	
 	* Feature: JSCalendar lang file usage according to system language
 	* Feature: Improved role presets and related rights checks
