* Core javascript cleanup * Search javascript and controller bugfixing * Changed name of Quebec in locale file

--- a/core/locale/static_country_zone.xml
+++ b/core/locale/static_country_zone.xml
@@ -76,7 +76,7 @@
 		<label index="CAN.NU">Nunavut</label>
 		<label index="CAN.ON">Ontario</label>
 		<label index="CAN.PE">Prince Edward Island</label>
-		<label index="CAN.QC">Queback</label>
+		<label index="CAN.QC">Quebec</label>
 		<label index="CAN.SK">Saskatchewan</label>
 		<label index="CAN.YT">Yukon Territory</label>
 		<label index="DEU.NDS">Niedersachsen</label>
