* Added russian translation

--- a/core/locale/file.xml
+++ b/core/locale/file.xml
@@ -30,4 +30,14 @@
 		<label index="filename">File Name</label>
 		<label index="filesize">File Size</label>
 	</labels>
+	<labels lang="ru_RU">
+		<label index="download">Скачать</label>
+		<label index="upload">Закачать</label>
+		<label index="size.gb">Гб</label>
+		<label index="size.mb">Мб</label>
+		<label index="size.kb">Кб</label>
+		<label index="size.b">Б</label>
+		<label index="filename">Имя файла</label>
+		<label index="filesize">Размер файла</label>
+	</labels>
 </locallang>
